2010-03-23  Jackson Harper  <jackson@ximian.com>

	* MarkupExpressionParser.cs: Don't use regexs.  This almost
	doubles performance of markup expression parsing.

2010-03-23  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: 1) Refactor the managed
	  DependencyProperty.GetValue () to take a Type::Kind
	  parameter so the correct default value metadata is returned.
	2) Ensure we instantiate a new PropertyMetadata every time we
	  call GetMetadata (Type) as the default value can change
	  depending on the Type argument.

2010-03-23  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: 1) Refactor the managed
	  DependencyProperty.GetValue () to take a Type::Kind
	  parameter so the correct default value metadata is returned.
	2) Ensure we instantiate a new PropertyMetadata every time we
	  call GetMetadata (Type) as the default value can change
	  depending on the Type argument.

2010-03-16  Jackson Harper  <jackson@ximian.com>

	* Types.cs: When we register a type we supply its content property
	name now.
	* ManagedXamlLoader.cs:
	* XamlLoaderCallbacks.cs: We dont need a callback for getting
	content properties anymore

2010-03-16  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: Managed land should not
	  generate default values to cover up for missing
	  DefaultValue/AutoCreateValue attributes in native.

2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Don't allocate a new
	  StringBuilder every time we want to get the next piece

2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Fix some bugs in our handling of
	  both quoted characters and trailing whitespace when parsing
	  bindings.

2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: The managed xaml loader doesn't need
	  to call SetParent on DOs anymore. This should be handled
	  fine by the engine.
